# fli

./: .dockerignore  .gitignore  404.html  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  Procfile  README.md  docker-compose.yml  fix-ai-planner-desktop-view.patch  index.html  mkdocs.yml  nixpacks.toml  objects.inv  package-lock.json  package.json  pyproject.toml  railpack.json  railway.toml  requirements.txt  sitemap.xml  tsconfig.json  worker-configuration.d.ts  wrangler.jsonc
.devcontainer/: Dockerfile
.github/workflows/: ci-cd.yml  docker.yml  docs.yml  homebrew.yml  lint.yml  publish.yml  release.yml  test.yml
Formula/: flights.rb
api/models/: index.html
api/search/: index.html
data/: airlines.csv  airports.csv
docs/: index.md
docs/api/: models.md  search.md
docs/examples/: advanced.md
docs/guides/: cloudflare.md  mcp.md  quickstart.md
examples/: README.md  basic_hotel_search.py  complex_flight_search.py  complex_round_trip_validation.py  date_search_with_preferences.py  error_handling_with_retries.py  hotel_budget_finder.py  hotel_comparison.py  hotel_multi_currency.py  hotel_search_with_filters.py  price_tracking.py  result_processing.py
examples/advanced/: index.html
fli/: __init__.py  cli.py  search.py
fli/app/: main.py
fli/cli/: enums.py  (+3 more)
scripts/: bump_version.py  capture_fixtures.py  cloudflare-deploy.sh  generate-dev-vars.sh  generate_enums.py  generate_homebrew_formula.py  worker-env-keys.txt
search/: search_index.json
src/: index.ts
tests/: conftest.py  live_api_dates.py  test_models.py  test_search.py  test_search_fuzz.py
(+90 files in other folders)
